session-12-ingress-configmaps-secrets/04-full-demo/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-backend
  labels:
    app: yatri-app
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-backend
  template:
    metadata:
      labels:
        app: yatri-backend
        tier: backend
    spec:
      containers:
        - name: backend
          image: python:3.12-alpine
          command:
            - sh
            - -c
            - |
              [...]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-backend-service
  labels:
    app: yatri-app
spec:
  type: ClusterIP
  selector:
    app: yatri-backend
  ports:
    - port: 8080
      targetPort: 8080
