session-12-ingress-configmaps-secrets/04-full-demo/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-frontend
  labels:
    app: yatri-app
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-frontend
  template:
    metadata:
      labels:
        app: yatri-frontend
        tier: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: yatri-frontend-html
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-frontend-service
  labels:
    app: yatri-app
spec:
  type: ClusterIP
  selector:
    app: yatri-frontend
  ports:
    - port: 80
      targetPort: 80
